--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["user"] = ViewBag.connectedUser;
     ViewData["Title"] = "Home Page";
 }
-<div class="bg-light" style="height:100%">
+<div class="bg-light">
     <br />
     <div class="row d-flex justify-content-center">
         <div class="rounded-1 card bg-secondary" style="width:90vw;cursor:pointer">
@@ -23,10 +23,10 @@
 <div class="row">
 
     <div class="column img-container-left">
-        <img style="width:250px;height:700px;" src="~/images/social-boy.png" />
+        <img style="width:200px;height:600px;" src="~/images/social-boy.png" />
     </div>
 
-    <div class="column" style="width:780px;">
+    <div class="column link-col">
         <div class="LinkContainer">
             @foreach (var item in Model) {
                 <div style="margin-left:3px;margin-top:5px">
@@ -37,7 +37,7 @@
     </div>
 
     <div class="column img-container-right">
-        <img style="width:250px;height:700px;" src="~/images/social-girl.png" />
+        <img style="width:200px;height:600px;" src="~/images/social-girl.png" />
     </div>
 
 </div>
