--- a/Views/Home/Index.cshtml.css
+++ b/Views/Home/Index.cshtml.css
@@ -2,8 +2,14 @@
     border: 2px solid;
     border-radius: 8px;
     background-color: grey;
-    width: 780px;
+    width: fit-content;
     padding: 10px;
+    margin:0px;
+    margin-right:0px;
+}
+
+.link-col{
+    width:fit-content;
 }
 
 .newlink {
@@ -17,11 +23,11 @@
 .img-container-left {
     float: left;
     width: 250px;
-    height: 700px;
+    height: fit-content;
 }
 
 .img-container-right {
     float: right;
     width: 250px;
-    height: 700px;
+    height: fit-content ;
 }
