profile page done, but needs css adjustments.

--- a/Views/Profile/ProfileView.cshtml
+++ b/Views/Profile/ProfileView.cshtml
@@ -5,6 +5,7 @@
     ViewData["PostCount"] = ViewBag.PostCount;
     ViewData["LikesCount"] = ViewBag.LikesCount;
     ViewData["Title"] = "Profile";
+    ViewData["user"] = ViewBag.user;
 }
 <div class="container">
     <div class="row">
