--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,30 +5,25 @@
     ViewData["user"] = ViewBag.connectedUser;
     ViewData["Title"] = "Home Page";
 }
-<div class="bg-light">
-    <br />
-    <div class="row d-flex justify-content-center">
-        <div class="rounded-1 card bg-secondary" style="width:90vw;cursor:pointer">
-            <div class="card-body text-white">
-                &nbsp;&nbsp;<h4 class="float-start">Publier</h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <a asp-action="Create" style="vertical-align:middle">
-                    <input type="text" style="vertical-align:middle;width:75%" placeholder="Publier un lien" />
-                </a>
-            </div>
+<div class="d-flex justify-content-center">
+    <div class="create-card">
+        <div class="card-body">
+            <h4 class="publier-text float-start">Publier</h4>
+            <a asp-action="Create" style="vertical-align:middle">
+                <input type="text" style="vertical-align:middle;width:75%" placeholder="Publier un lien" />
+            </a>
         </div>
     </div>
-    <br />
 </div>
-
 <div class="row">
-
     <div class="column img-container-left">
         <img style="width:200px;height:600px;" src="~/images/social-boy.png" />
     </div>
 
     <div class="column link-col">
         <div class="LinkContainer">
-            @foreach (var item in Model) {
+            @foreach (var item in Model)
+            {
                 <div style="margin-left:3px;margin-top:5px">
                     <partial name="_LinkPartial" model="item" view-data="ViewData" />
                 </div>
@@ -39,5 +34,4 @@
     <div class="column img-container-right">
         <img style="width:200px;height:600px;" src="~/images/social-girl.png" />
     </div>
-
 </div>
