--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,21 +1,40 @@
 ﻿@{
-    ViewData["Title"] = "Create Link";
+    ViewData["Title"] = "Create";
 }
 
-<div class="d-flex justify-content-center form-grid">
+<div class="contour d-flex justify-content-center bg-secondary">
     <br />
     <form asp-action="AjouterUnLien">
         <br />
-        <input class="title-input" type="text" name="Title" id="Title" placeholder="Titre"/>
+        <input type="text" name="Title" id="Title" placeholder="Titre" style="width:100%"/>
         <br />
         <br />
         <textarea cols="100" rows="6" type="text" name="Description" placeholder="Description"></textarea>
-        <br/>
-        <input class="btn btn-primary submit-button" type="submit" value="Publier" />
+        <div class="submit-button">
+            <input class="btn btn-primary" type="submit" value="Publier" />
+        </div>
     </form>
 </div>
-<img class="img-engineers" src="~/images/undraw_Engineering_team.png" />
-
+<img class="image-de-groupe" src="~/images/undraw_Engineering_team.png" />
+<style>
+    .contour{
+        border: 2px solid;
+        border-radius: 8px;
+        width: 80vw;
+        height: 40vh;
+    }
+    .submit-button{
+        text-align: center;
+        margin-top: 1rem;
+    }
+    .image-de-groupe{
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+        max-width:100%;
+        position:relative;
+    }
+</style>
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
