Work in progress

--- a/Views/Login/Index.cshtml
+++ b/Views/Login/Index.cshtml
@@ -12,7 +12,7 @@
         <br />
         <h1 class="Comingback">Coming back?</h1>
         <div class="e1_74">
-            <form name="LoginForm" action="/login/Login" method="get">
+            <form name="LoginForm" action="/login/Login" method="post">
                 <br />
                 @if (ViewBag.Alert != null) {
                     <script type="text/javascript">
