--- a/Views/Shared/_LinkPartial.cshtml
+++ b/Views/Shared/_LinkPartial.cshtml
@@ -31,8 +31,11 @@
             <a style="text-decoration:none; color:black;" asp-route-Id="@Model.Id" asp-action="delete" asp-controller="Home">
                 <i class="bi bi-x-circle-fill" style="display:inline;float:right"></i>
             </a>
+            <h6>Published by: @member.Username</h6>
         }
-        <h6>Published by: @member.Username</h6>
+        else{
+            <h6>Published by: @Model.Member.Username</h6>
+        }
         <h6 class="text-muted"> @Model.PublicationDate</h6>
         &nbsp;
 
