--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewData["user"] = ViewBag.connectedUser;
     ViewData["Title"] = "Home Page";
+    ViewData["votes"] = ViewBag.votes;
 }
 <div class="d-flex justify-content-center">
     <div class="create-card">
