--- a/Views/Home/ViewLink.cshtml
+++ b/Views/Home/ViewLink.cshtml
@@ -16,9 +16,9 @@
         {
             if (item.LinkId == Model.Id)
             {
-                if (item.IsUpVote == true)
+                if (item.IsUpVote == 1)
                     is_upvote = true;
-                if (item.IsUpVote == false)
+                if (item.IsUpVote == 0)
                     is_downvote = true;
             }
         }
