--- a/Views/Profile/ProfileView.cshtml
+++ b/Views/Profile/ProfileView.cshtml
@@ -10,14 +10,14 @@
 }
 <div class="container">
     <div class="row">
-        <div class="col-sm" style="max-width:500px">
+        <div class="col-sm-auto link-col">
             @foreach (Link link in member.Links.ToList()) {
                 <partial name="_ProfileLink" model="@link" view-data="ViewData" />
             }
         </div>
-            <span>Don't have any links?<a asp-controller="Home" asp-action="Create"> Make one here.</a></span>
+        <span>Don't have any links?<a asp-controller="Home" asp-action="Create"> Make one here.</a></span>
 
-        <div class="col-sm">
+        <div class="col-sm-auto member-col">
             <partial name="_Profile" model="@member" view-data="ViewData"/>
         </div>
     </div>
