--- a/Views/Shared/_ProfileLink.cshtml
+++ b/Views/Shared/_ProfileLink.cshtml
@@ -1,52 +1,23 @@
-﻿@model Readit.Models.Entities.Link
-
+﻿@using Readit.Models.Entities
+@model Readit.Models.Entities.Link
+@{
+    var member = (Member)ViewData["user"];
+}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-<div class="Link" asp-action="">
-
-</div>
-
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpVote)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpVote)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DownVote)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DownVote)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PublicationDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PublicationDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Member)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Member.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a style="text-decoration:none; color:black;" asp-route-Id="@Model?.Id" asp-action="delete" asp-controller="Home">
-        <i class="bi bi-x-circle-fill" style="display:inline;float:right"></i>
-    </a>
+<div class="Link-Profile col" asp-action="">
+    <div class="row title-row">
+        <h2 class="title">@Model.Title</h2>
+    </div>
+    <div class="row delete-row">
+        <a style="text-decoration:none; color:black;" asp-route-Id="@Model.Id" asp-action="delete" asp-controller="Home">
+            <i class="bi bi-x-circle-fill" style="display:inline;float:right"></i>
+        </a>
+    </div>
+    <div class="row info-row">
+        <h6>Published by: @member.Username</h6>
+        <h6 class="text-muted">@Model.PublicationDate</h6>
+    </div>
+    <div class="row desc-row">
+        <p>@Model.Description</p>
+    </div>
 </div>
