--- a/Views/Home/ViewLink.cshtml
+++ b/Views/Home/ViewLink.cshtml
@@ -8,26 +8,26 @@
 *@
 @{
     ViewData["user"] = ViewBag.connectedUser;
-    List<Vote>? votes = JsonConvert.DeserializeObject<List<Vote>>(Http.HttpContext.Session.GetString("votes"));
+    //List<Vote>? votes = JsonConvert.DeserializeObject<List<Vote>>(Http.HttpContext.Session.GetString("votes"));
     bool is_upvote = false;
     bool is_downvote = false;
-    if (votes != null)
-    {
-        foreach (var item in votes)
-            if (item.LinkId == Model.Id)
-            {
-                if (item.IsUpVote == true)
-                    is_upvote = true;
-                if (item.IsUpVote == false)
-                    is_downvote = true;
-            }
-        
-    }
+    //if (votes != null)
+    //{
+    //    foreach (var item in votes)
+    //        if (item.LinkId == Model.Id)
+    //        {
+    //            if (item.IsUpVote == true)
+    //                is_upvote = true;
+    //            if (item.IsUpVote == false)
+    //                is_downvote = true;
+    //        }
+
+    //}
 }
 
 <div class="d-flex justify-content-center">
-    <div class="carte-parent">
-        <div class="carte-lien card-body bg-secondary text-white">
+    <div class="carte-parent bg-secondary">
+        <div class="carte-lien card-body text-white">
             <h6 class="float-end">Date de publication: @Model.PublicationDate</h6>
             <h6 class="card-subtitle">@Model.Member.Username</h6>
             <h1 class="card-title">&nbsp;&nbsp;@Model.Title</h1>
@@ -35,25 +35,25 @@
                 @if (is_upvote == false)
                 {
                     <a asp-action="Upvote" style="cursor:pointer">
-                        <img src="~/images/thumb-up-outline.png" width="50%" height="50%" /> @Model.UpVote
+                        <img class="thumb-img" src="~/images/thumb-up-outline.png" /> @Model.UpVote
                     </a>
                 }
                 @if (is_upvote == true)
                 {
                     <a asp-action="RemoveUpvote" style="cursor:pointer">
-                        <img src="~/images/thumb-up.png" width="50%" height="50%" /> @Model.UpVote
+                        <img class="thumb-img" src="~/images/thumb-up.png" /> @Model.UpVote
                     </a>
                 }
                 @if (is_downvote == false)
                 {
                     <a asp-action="Downvote" style="cursor:pointer">
-                        <img src="~/images/thumb-down-outline.png" width="50%" height="50%" /> @Model.DownVote
+                        <img class="thumb-img" src="~/images/thumb-down-outline.png" /> @Model.DownVote
                     </a>
                 }
                 @if (is_downvote == true)
                 {
                     <a asp-action="RemoveDownvote" style="cursor:pointer">
-                        <img src="~/images/thumb-down.png" width="50%" height="50%" /> @Model.DownVote
+                        <img class="thumb-img" src="~/images/thumb-down.png" /> @Model.DownVote
                     </a>
                 }
             </div>
@@ -73,7 +73,7 @@
     }
     <div class="carte-decoration bg-secondary">
         <div class="card-body text-white">
-            <input name="memberid" id="memberid" value="@ViewData["user"]" hidden />
+            <input name="memberid" id="memberid" value="@ViewBag.connectedUser.Id" hidden />
             <input name="linkid" id="linkid" value="@Model.Id" hidden />
             <input class="comment-input" type="text" name="comment" id="comment" placeholder="Écrire un commentaire" />
             &nbsp;&nbsp;&nbsp;&nbsp;<input class="btn btn-primary" type="submit" value="Publier" />
@@ -96,50 +96,8 @@
     </div>
 </div>
 <div class="container div">
-@foreach (var comment in Model.Comments.OrderByDescending(c => c.PublicationDate))
-{
-    <partial name="_Comment" model="comment" />
-}
+    @foreach (var comment in Model.Comments.OrderByDescending(c => c.PublicationDate))
+    {
+        <partial name="_Comment" model="comment" />
+    }
 </div>
-<style>
-    .div {
-        overflow: auto;
-    }
-    .description{
-        margin-left: 10%;
-        margin-right: 15%;
-        font-size:150%;
-        word-wrap: break-word;
-    }
-    .carte-parent{
-        border: 2px solid;
-        border-radius: 8px;
-        width: 80vw;
-        height: 20vw;
-    }
-    .carte-lien{
-        border-radius: 8px;
-        margin-bottom: 5px;
-        width:80vw;
-        height:20vw;
-    }
-    .carte-decoration{
-        border: 2px solid;
-        border-radius: 8px;
-        margin-bottom: 5px;
-        width: 80vw;
-    }
-    .images-pouce{
-        float:left;
-        font-weight:bold;
-        text-decoration:none;
-        max-width: 7vw;
-    }
-    .images-pouce img{
-        bottom:0;
-    }
-    .comment-input{
-        vertical-align: middle;
-        width: 69vw;
-    }
-</style>
