--- a/Views/Home/ViewLink.cshtml.css
+++ b/Views/Home/ViewLink.cshtml.css
@@ -20,7 +20,7 @@
     border-radius: 8px;
     margin-bottom: 5px;
     width: 80vw;
-    height: 20vw;
+    height: 20vh;
 }
 
 .carte-decoration {
